qt: Fix --disable-wallet build and --disablewallet mode (#3762)
* Fix --disable-wallet build and --disablewallet mode

Console is not showing up in --disable-wallet build and it's crashing in --disablewallet mode before this commit.

* Use nullptr

* Load a stylesheet for the RPCConsole when it's not going to be set as a central widget

This partially reverts the initial commit.

* Fix QMainWindow dark/light styles

* Avoid implicit pointer to bool conversions

* qt: Set RPCConsole's window flags based on wallet availability

* multi-line early returns

* Bring back ifdef to fix a recently introduced crash

Introduced in https://github.com/dashpay/dash/pull/3682/commits/2856f46424627fb9e2f2057144fc173440e2c565#diff-f63c3d5094d55f88dbd1967774f85838b3aee5a40540b8c82b924574bca772a0R203

--- a/src/qt/res/css/light.css
+++ b/src/qt/res/css/light.css
@@ -39,12 +39,10 @@ Loaded in GUIUtil::loadStyleSheet() in guitil.cpp.
 Common stuff
 ******************************************************/
 
-WalletFrame,
-QDialog {
-    background-color: #f2f2f4;
-}
-
-QMessageBox {
+QDialog,
+QMainWindow,
+QMessageBox
+WalletFrame {
     background-color: #f2f2f4;
 }
 
